--- a/redmine_project_workflow_extension/config/locales/en.yml
+++ b/redmine_project_workflow_extension/config/locales/en.yml
@@ -12,6 +12,9 @@ en:
   label_milestone_new: "New milestone"
   label_milestone_name: "Name"
 
+  label_chart_estimated_time: "Estimated time"
+  label_chart_total_time: "Real time"
+
   label_show_milestones: "Show milestones"
   label_draw_all: "All"
   label_show_versions: "Show versions"
